    - fetch_source_files:
      + Correct indentation, and error with brace placement which caused
        apt-cache output to not be used.
      + Add package information into the key of the %entries hash, in
        order to cope with multiple packages being returned by apt-cache.
        Based on a patch by Goswin von Brederlow for Bug #408091.
  * sbuild.conf.local:
    - Add pgp_options from sbuild.conf (Closes: #398128).
    - Add check_watches.

 --

sbuild (0.52) unstable; urgency=low

  * New upstream release.
  * sbuild: Remove incorrect WannaBuild:: prefix from version_compare.

 -- Roger Leigh <rleigh@debian.org>  Sat, 21 Oct 2006 21:23:16 +0100

sbuild (0.51) unstable; urgency=high

  * Urgency is high because this version fixes an RC bug in testing.
  * Sbuild.pm: Fix handling of ~ in versions (merge from upstream SVN cset
    100; Closes: 392752).
  * sbuild, Sbuild/Conf.pm, sbuild.conf.local: Add support for setting APT
    policy, to allow building from experimental and sarge-backports.
    Thanks to Wouter Verhelst for this patch, which has been slightly
    modified to add configurability and adapt to this version of sbuild.
  * sbuild:
    - Don't run md5sum inside the chroot.  Thanks to Michael Banck
      (Closes: #392323).
    - chroot_arch():  New function to detect build architecture from
      within the chroot.  Thanks to Kees Cook (Closes: #392992).
  * Sbuild/Conf.pm: Fix check for schroot.  Thanks to Julien Danjou for
    finding this (Closes: #392751).
  * sbuild-setup.7.in: Correct example commandline for debootstrap.
    Thanks to Alex Pennace (Closes: #391277).

 -- Roger Leigh <rleigh@debian.org>  Sat, 21 Oct 2006 10:13:00 +0100

sbuild (0.50) unstable; urgency=low

  * debian/copyright: Add Alioth file download location.
  * chroot/add_sbuild_user:
    - Fix chrapt command examples in output to use correct option syntax,
      thanks to Matthias Julius (Closes: #381186).
    - Add SHELL to sudoers env_keep.
  * sbuild: