@@ -1,4 +1,3 @@
 avg-pkg-build-time.1
 sbuild.1
 sbuild-setup.7
-update-sourcedeps.1
