@@ -10,7 +10,6 @@ GENFILES =			\
 	avg-pkg-build-time.1	\
 	sbuild.1		\
 	sbuild-setup.7		\
-	update-sourcedeps.1	\
 	Sbuild/Log.pm
 
 %: %.in
@@ -49,7 +48,7 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	$(INSTALL) -m 755 sbuild update-sourcedeps avg-pkg-build-time \
+	$(INSTALL) -m 755 sbuild avg-pkg-build-time \
 		$(DESTDIR)/usr/bin/
 	$(INSTALL) -m 644 Sbuild.pm $(DESTDIR)/usr/share/perl5/
 	$(INSTALL) -m 644 Sbuild/Chroot.pm $(DESTDIR)/usr/share/perl5/Sbuild/Chroot.pm
