@@ -12,6 +12,8 @@
 $mailfrom = "Source Builder <sbuild>";
 
 # File with the source dependencies
+# Note that source dependencies are obsolete, and support will be removed
+# in Lenny.
 $source_dependencies = "/var/lib/sbuild/source-dependencies";
 
 # Directory for writing build logs to
