@@ -1,63 +1,0 @@
-.\" Copyright © 1998  James Troup <james@nocrew.org>
-.\" Copyright © 2006  Roger Leigh <rleigh@debian.org>
-.\"
-.\" sbuild is free software; you can redistribute it and/or modify it
-.\" under the terms of the GNU General Public License as published by
-.\" the Free Software Foundation; either version 2 of the License, or
-.\" (at your option) any later version.
-.\"
-.\" sbuild is distributed in the hope that it will be useful, but
-.\" WITHOUT ANY WARRANTY; without even the implied warranty of
-.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-.\" General Public License for more details.
-.\"
-.\" You should have received a copy of the GNU General Public License
-.\" along with this program; if not, write to the Free Software
-.\" Foundation, Inc., 59 Temple Place, Suite 330, Boston,
-.\" MA  02111-1307  USA
-.TH UPDATE\-SOURCEDEPS 1 "@DATE@" "Version @VERSION@" "Debian sbuild"
-.SH NAME
-update\-sourcedeps \- update the sbuild source dependency files
-.SH SYNOPSIS
-.B update\-sourcedeps
-.SH VERSION
-This man page documents the packaged version of sbuild.  This version
-is maintained by the \fBbuildd-tools\fP project developers on Alioth
-(\f[CR]https://alioth.debian.org/projects/buildd\-tools/\fP).
-.SH DESCRIPTION
-\fBupdate\-sourcedeps\fR updates the source\-dependencies\-* files
-from \f[CR]buildd.debian.org/andrea/\fP.  These dependencies are used
-by sbuild to calculate the Build-Depends for those packages that don't
-include them\[em]mainly potato, and increasingly fewer woody,
-packages.  \fBupdate\-sourcedeps\fR also contains arch-specific and
-package-specific patches that are applied by sbuild after the source
-is unpacked.  These patches work around temporary compiler bugs and
-other transient problems so a package can still be autobuilt and the
-change can be easily reverted without bothering the package
-maintainer.
-.PP
-\fBupdate\-sourcedeps\fR is normally called by buildd.  Since sbuild
-is used by itself here, \fBupdate\-sourcedeps\fR must to be called
-manually (or not).  The source-dependencies-* files aren't required by
-sbuild but are very helpful if you're autobuilding a lot of packages.
-.SH NOTE
-Before you file bugs for build failures be sure you understand the
-difference between src-deps and build-deps and also how the src-dep
-patches work.
-.SH WARNING
-Inappropriate settings in your \fI~/.wgetrc\fP can cause problems.
-The WGETRC environment variable can be used to redirect \fI.wgetrc\fP.
-.SH AUTHORS
-.nf
-James Troup
-Roman Hodek
-.fi
-.SH "SEE ALSO"
-.SP
-.BR sbuild (1).
-.\"#
-.\"# The following sets edit modes for GNU EMACS
-.\"# Local Variables:
-.\"# mode:nroff
-.\"# fill-column:79
-.\"# End:
